--- a/.github/workflows/directory.yml
+++ b/.github/workflows/directory.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Run Directory Tree Generator
         uses: DenizAltunkapan/directory-tree-generator@v4
         with:
-          path: '["backend","frontend"]'
-          extensions: '[".java",".html",".ts",".scss",".md"]'
+          path: "backend,frontend"
+          extensions: ".java,.html,.ts,.scss"
           show-extensions: true
 
       - name: Commit and push changes
